--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="body">
     <h4 class="onOff">On</h4>
-    <div class="swtchCnt">
-        <div class="switch" onclick="toggleSwtch()"></div>
+    <div class="swtchCnt" onclick="toggleSwtch()">
+        <div class="switch"></div>
     </div>
     <script src="./index.js"></script>
 </body>
